--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "msc-animet",
-  "version": "1.1.0",
+  "version": "1.2.0-dev",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
