Add restart policy for nightly docker build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,6 @@ services:
     container_name: msc-animet-nightly
     build:
       context: .
+    restart: unless-stopped
     ports:
     - '5090:80'
