--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "h264-mp4-encoder": "^1.0.12",
     "luxon": "^2.5.2",
     "ol": "^8.2.0",
+    "proj4": "^2.10.0",
     "saxon-js": "^2.5.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.18.2",
