--- a/package.json
+++ b/package.json
@@ -2,62 +2,49 @@
   "name": "msc-animet",
   "version": "2.3.0-dev",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix --ignore-path .gitignore",
     "deploy": "./deploy/gh-pages/deploy.sh"
   },
   "dependencies": {
-    "axios": "^0.26.0",
-    "axios-retry": "^4.4.0",
+    "@mdi/font": "7.4.47",
+    "axios": "^1.7.2",
+    "axios-retry": "^4.4.2",
     "canvas-txt": "^3.0.0",
-    "core-js": "^3.6.5",
-    "countries-and-timezones": "^3.5.1",
-    "debounce": "^1.2.1",
+    "core-js": "^3.37.1",
+    "countries-and-timezones": "^3.6.0",
     "h264-mp4-encoder": "^1.0.12",
     "luxon": "^3.4.4",
-    "ol": "^9.1.0",
-    "proj4": "^2.10.0",
-    "saxon-js": "^2.5.0",
-    "vue": "^2.6.11",
-    "vue-i18n": "^8.18.2",
-    "vue-router": "^3.3.4",
-    "vuetify": "^2.6.14",
-    "vuex": "^3.4.0"
+    "mitt": "^3.0.1",
+    "ol": "^9.2.4",
+    "proj4": "^2.11.0",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "vue": "^3.4.31",
+    "vue-i18n": "^9.13.1",
+    "vuetify": "^3.6.11"
   },
   "devDependencies": {
-    "@mdi/font": "^7.3.67",
-    "@mdi/js": "^7.1.96",
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-service": "~5.0.8",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-polyfill-webpack-plugin": "^2.0.1",
-    "sass": "~1.32.6",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "license": "GPL-3.0-or-later"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-vuetify": "^1.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "pinia": "^2.1.7",
+    "prettier": "^3.3.3",
+    "sass": "1.77.6",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-fonts": "^1.1.1",
+    "unplugin-vue-components": "^0.27.2",
+    "unplugin-vue-router": "^0.10.0",
+    "vite": "^5.3.3",
+    "vite-plugin-vue-layouts": "^0.11.0",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-router": "^4.4.0"
+  }
 }
