--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.37.1",
     "countries-and-timezones": "^3.6.0",
     "h264-mp4-encoder": "^1.0.12",
+    "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "mitt": "^3.0.1",
     "ol": "^9.2.4",
