--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "luxon": "^3.4.4",
     "mitt": "^3.0.1",
     "ol": "^9.2.4",
+    "ol-contextmenu": "^5.5.0",
     "proj4": "^2.11.0",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vue": "^3.4.31",
