--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         GEOMET_CLIMATE_NIGHTLY_URL: "${GEOMET_CLIMATE_NIGHTLY_URL}"
         GEOMET_WEATHER_NIGHTLY_URL: "${GEOMET_WEATHER_NIGHTLY_URL}"
         GEOMET_MAPPROXY_NIGHTLY_URL: "${GEOMET_MAPPROXY_NIGHTLY_URL}"
+        VITE_SIMPLIFIED_BOUNDARIES: "${VITE_SIMPLIFIED_BOUNDARIES}"
     restart: unless-stopped
     ports:
     - '5090:80'
