--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       context: .
       args:
         ANIMET_NIGHTLY: 'True'
-        GEOMET_CLIMATE_NIGHTLY_URL: '${GEOMET_CLIMATE_NIGHTLY_URL}'
-        GEOMET_WEATHER_NIGHTLY_URL: '${GEOMET_WEATHER_NIGHTLY_URL}'
-        GEOMET_MAPPROXY_NIGHTLY_URL: '${GEOMET_MAPPROXY_NIGHTLY_URL}'
-        VITE_SIMPLIFIED_BOUNDARIES: '${VITE_SIMPLIFIED_BOUNDARIES}'
-        VITE_PLACE_NAMES: '${VITE_PLACE_NAMES}'
+        GEOMET_CLIMATE_NIGHTLY_URL: "${GEOMET_CLIMATE_NIGHTLY_URL}"
+        GEOMET_WEATHER_NIGHTLY_URL: "${GEOMET_WEATHER_NIGHTLY_URL}"
+        GEOMET_MAPPROXY_NIGHTLY_URL: "${GEOMET_MAPPROXY_NIGHTLY_URL}"
+        VITE_SIMPLIFIED_BOUNDARIES: "${VITE_SIMPLIFIED_BOUNDARIES}"
+        VITE_PLACE_NAMES: "${VITE_PLACE_NAMES}"
     restart: unless-stopped
     ports:
       - '5090:80'
