--- a/.gitignore
+++ b/.gitignore
@@ -26,31 +26,6 @@ pnpm-debug.log*
 *.sw?
 
 # Generated files for nightly build
-src/assets/trees/tree_en_climatenightly.js
-src/assets/trees/tree_en_gebco.js
-src/assets/trees/tree_en_mapproxy.js
-src/assets/trees/tree_en_nasa.js
-src/assets/trees/tree_en_noaa-ncep.js
-src/assets/trees/tree_en_noaa-nowcoast.js
-src/assets/trees/tree_en_weathernightly.js
-src/assets/trees/tree_fr_climatenightly.js
-src/assets/trees/tree_fr_gebco.js
-src/assets/trees/tree_fr_mapproxy.js
-src/assets/trees/tree_fr_nasa.js
-src/assets/trees/tree_fr_noaa-ncep.js
-src/assets/trees/tree_fr_noaa-nowcoast.js
-src/assets/trees/tree_fr_weathernightly.js
-src/locales/en/layers_climatenightly.json
-src/locales/en/layers_gebco.json
-src/locales/en/layers_mapproxy.json
-src/locales/en/layers_nasa.json
-src/locales/en/layers_noaa-ncep.json
-src/locales/en/layers_noaa-nowcoast.json
-src/locales/en/layers_weathernightly.json
-src/locales/fr/layers_climatenightly.json
-src/locales/fr/layers_gebco.json
-src/locales/fr/layers_mapproxy.json
-src/locales/fr/layers_nasa.json
-src/locales/fr/layers_noaa-ncep.json
-src/locales/fr/layers_noaa-nowcoast.json
-src/locales/fr/layers_weathernightly.json
+src/assets/trees/tree_*
+src/locales/en/layers_*
+src/locales/fr/layers_*
