adding dev and stage to available server for validation
var in docker conf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
         ANIMET_NIGHTLY: 'True'
         GEOMET_CLIMATE_NIGHTLY_URL: "${GEOMET_CLIMATE_NIGHTLY_URL}"
         GEOMET_WEATHER_NIGHTLY_URL: "${GEOMET_WEATHER_NIGHTLY_URL}"
+        GEOMET_CLIMATE_DEV_URL: "${GEOMET_CLIMATE_DEV_URL}"
+        GEOMET_WEATHER_DEV_URL: "${GEOMET_WEATHER_DEV_URL}"
+        GEOMET_CLIMATE_STAGE_URL: "${GEOMET_CLIMATE_STAGE_URL}"
+        GEOMET_WEATHER_STAGE_URL: "${GEOMET_WEATHER_STAGE_URL}"
         GEOMET_MAPPROXY_NIGHTLY_URL: "${GEOMET_MAPPROXY_NIGHTLY_URL}"
         VITE_SIMPLIFIED_BOUNDARIES: "${VITE_SIMPLIFIED_BOUNDARIES}"
         VITE_PLACE_NAMES: "${VITE_PLACE_NAMES}"
