--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "msc-animet",
-  "version": "2.3.0-dev",
+  "version": "2.3.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
