--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "canvas-txt": "^3.0.0",
     "core-js": "^3.37.1",
     "countries-and-timezones": "^3.6.0",
+    "dompurify": "^3.2.7",
     "h264-mp4-encoder": "^1.0.12",
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
