Added new NRCan basemap and bugfixes

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "mitt": "^3.0.1",
-    "ol": "^9.2.4",
+    "ol": "^10.2.1",
     "ol-contextmenu": "^5.5.0",
+    "ol-mapbox-style": "^13.2.0",
     "proj4": "^2.11.0",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vue": "^3.4.31",
