feat: Introduce Pixi for Python dependency management and script execution, updating documentation and gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ pnpm-debug.log*
 src/assets/trees/tree_*
 src/locales/en/layers_*
 src/locales/fr/layers_*
+
+# pixi environments
+.pixi
+*.egg-info
